1.0.4 fix: se elimina scroll en componente landing page y se corrige tamaño de caption de carousel en version mobile

--- a/src/sass/_landingPage.scss
+++ b/src/sass/_landingPage.scss
@@ -1,4 +1,5 @@
 .landingPage {
+    position: fixed;
     display: grid;
     place-content: center;
     padding-top: 20rem;
